--- a/R/Getting Started/Data_Structures.Rmd
+++ b/R/Getting Started/Data_Structures.Rmd
@@ -1,9 +1,15 @@
-Data\_Sets, Data Structures, Data Import Sources
-================
-Sumad Singh
-September 5, 2017
+---
+title: "Data_Sets, Data Structures, Data Import Sources  "
+author: "Sumad Singh"
+date: "September 5, 2017"
+output: github_document
+---
 
-``` r
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+  
+```{r}
 # Function to return a combination of results for printing at the end of a section
 print.all <-  function (...){
   temp <- list(...)
@@ -11,12 +17,13 @@ print.all <-  function (...){
     print(temp[[i]])
   }
 }
+
+
 ```
 
-DATASETS, DATA TYPES IN R, SCALES OF MEASUREMENT
-------------------------------------------------
+## DATASETS, DATA TYPES IN R, SCALES OF MEASUREMENT
 
-``` r
+```{r}
 # DATA SETS
 # Fundamentally identifiers of a data set are 
 #1. Primary Key / Case Identifier : Can be declared as rownames in R or id variables 
@@ -44,26 +51,13 @@ DATASETS, DATA TYPES IN R, SCALES OF MEASUREMENT
 # CLASS - can be seen using class(), usually objects are of class of one
 # of the data structures - vector, data frame, list etc
  class(NA) # logical, object of NA class
-```
-
-    ## [1] "logical"
-
-``` r
  class(NaN) # numeric, object if numeric class
-```
-
-    ## [1] "numeric"
-
-``` r
  class(NULL) # NULL , a separate class
+
 ```
+## DATA STRUCTURES
 
-    ## [1] "NULL"
-
-DATA STRUCTURES
----------------
-
-``` r
+```{r}
 # VECTORS
 # Some ways to initialize a vector
 x <- 5:10
@@ -79,12 +73,7 @@ vec <- sapply(x, function (x) {
 print.all(x,y,z,vec)
 ```
 
-    ## [1]  5  6  7  8  9 10
-    ## [1] 1 2 3 4 5 6
-    ##  [1] "" "" "" "" "" "" "" "" "" ""
-    ## [1]  5  6  7  8  9 10
-
-``` r
+```{r}
 # MATRICES 
 # Explore the function
 mat <-matrix(data= vec,nrow = 3,ncol =2 ,byrow = TRUE ,
@@ -92,18 +81,7 @@ mat <-matrix(data= vec,nrow = 3,ncol =2 ,byrow = TRUE ,
 print.all(str(mat), dimnames(mat))
 ```
 
-    ##  int [1:3, 1:2] 5 7 9 6 8 10
-    ##  - attr(*, "dimnames")=List of 2
-    ##   ..$ rnames: chr [1:3] "r1" "r2" "r3"
-    ##   ..$ cnames: chr [1:2] "c1" "c2"
-    ## NULL
-    ## $rnames
-    ## [1] "r1" "r2" "r3"
-    ## 
-    ## $cnames
-    ## [1] "c1" "c2"
-
-``` r
+```{r}
 # ARRAYS - multi dimensional matrices
 # Example of three dimensional arrays
 a <- array(data = 4:27, dim = c(2,3,4) ,dimnames = list(dim1 = c("a1","a2"), 
@@ -111,43 +89,10 @@ a <- array(data = 4:27, dim = c(2,3,4) ,dimnames = list(dim1 = c("a1","a2"),
                                                         dim3= c("c1","c2", "c3", "c4"))) 
 # array of 2*3*4 elements
 print.all(a, a[1,2,3]) # element identified as a1,a2,c3
-```
-
-    ## , , dim3 = c1
-    ## 
-    ##     dim2
-    ## dim1 b1 b2 b3
-    ##   a1  4  6  8
-    ##   a2  5  7  9
-    ## 
-    ## , , dim3 = c2
-    ## 
-    ##     dim2
-    ## dim1 b1 b2 b3
-    ##   a1 10 12 14
-    ##   a2 11 13 15
-    ## 
-    ## , , dim3 = c3
-    ## 
-    ##     dim2
-    ## dim1 b1 b2 b3
-    ##   a1 16 18 20
-    ##   a2 17 19 21
-    ## 
-    ## , , dim3 = c4
-    ## 
-    ##     dim2
-    ## dim1 b1 b2 b3
-    ##   a1 22 24 26
-    ##   a2 23 25 27
-    ## 
-    ## [1] 18
-
-``` r
 # Matrices can have same type of elements
 ```
 
-``` r
+```{r}
 # DATA FRAMES
 #  Constucting from vectors
 id <- c(3,4,2,1,5)
@@ -176,18 +121,12 @@ pdata <- data.frame(id, age, diabetes1, diabetes2, row.names = id ,stringsAsFact
  #x <- c("ID","AGE") , df[,x] 
  # x <- c("ID","AG") , df[,x] will not work and throw an error
 print.all(df$DIAB, pdata$diab)  # df[,"DIAB"] , df[,c("ID","AG")] throw error
-```
 
-    ## [1] Type1 Type2 Type1 Type2 Type2
-    ## Levels: Type1 Type2
-    ## NULL
-
-``` r
 # lESSON :You have to be careful of these aspects when building data pipelines, using []
 # seems to be helpful
 ```
 
-``` r
+```{r}
 # DATAFRAMES CONTINUED
 # CROSS TABS FROM DATA FRAMES 
 tbl <- table(pdata$age, pdata$diabetes1)
@@ -199,22 +138,6 @@ tbl <- table(pdata$age, pdata$diabetes1)
 
 attach(mtcars)
 str(mtcars)
-```
-
-    ## 'data.frame':    32 obs. of  11 variables:
-    ##  $ mpg : num  21 21 22.8 21.4 18.7 18.1 14.3 24.4 22.8 19.2 ...
-    ##  $ cyl : num  6 6 4 6 8 6 8 4 4 6 ...
-    ##  $ disp: num  160 160 108 258 360 ...
-    ##  $ hp  : num  110 110 93 110 175 105 245 62 95 123 ...
-    ##  $ drat: num  3.9 3.9 3.85 3.08 3.15 2.76 3.21 3.69 3.92 3.92 ...
-    ##  $ wt  : num  2.62 2.88 2.32 3.21 3.44 ...
-    ##  $ qsec: num  16.5 17 18.6 19.4 17 ...
-    ##  $ vs  : num  0 0 1 1 0 1 0 1 1 1 ...
-    ##  $ am  : num  1 1 1 0 0 0 0 0 0 0 ...
-    ##  $ gear: num  4 4 4 3 3 3 3 4 4 4 ...
-    ##  $ carb: num  4 4 1 1 2 1 4 2 2 4 ...
-
-``` r
 tbl2 <- table(cyl,gear)
 detach()
 
@@ -224,31 +147,10 @@ detach()
 # AS <PACKAGE> :: <FUNCTION NAME>
 cyl <- c(2,3,4)
 print.all(attach(mtcars) , cyl) # 
-```
-
-    ## The following object is masked _by_ .GlobalEnv:
-    ## 
-    ##     cyl
-
-    ## <environment: 0x7f8b0557c878>
-    ## attr(,"name")
-    ## [1] "mtcars"
-    ## [1] 2 3 4
-
-``` r
 detach(mtcars)
 
 # WITH() AND <<-
 with(mtcars, table(cyl,gear))
-```
-
-    ##    gear
-    ## cyl  3  4  5
-    ##   4  1  8  2
-    ##   6  2  4  1
-    ##   8 12  0  2
-
-``` r
 # With creates an environmnt enclosure, any variables or functions defined in the 
 # enclosure are valid in the enclosure only
 # << i.e GLOBAL ASSIGNMENT CAN BE USED WITH WITH() TO USE VARIABLES CREATED OUTSIDE THE ENCLOSURE
@@ -258,13 +160,7 @@ with(mtcars, table(cyl,gear))
 tbl3
 ```
 
-    ##    gear
-    ## cyl  3  4  5
-    ##   4  1  8  2
-    ##   6  2  4  1
-    ##   8 12  0  2
-
-``` r
+```{r}
 # FACTORS
 # VARIABLES IN A DATA FRAME THAT ARE ON SCALE ORDINAL OR NOMINAL NEED TO BE DECLARED AS FACTORS,
 # TO ENSURE PROPER TREATMENT IN STATISTICAL ANALYSIS, AS WELL AS IN PLOTTING
@@ -298,94 +194,28 @@ pdata4$status <- factor(x = pdata4$status,
                         
 
 print.all(str(pdata1), str(pdata2), str(pdata3), str(pdata4), summary(pdata4))
+
 ```
 
-    ## 'data.frame':    5 obs. of  4 variables:
-    ##  $ id      : num  3 4 2 1 5
-    ##  $ age     : num  22 32 45 33 32
-    ##  $ diabetes: chr  "Type1" "Type2" "Type1" "Type2" ...
-    ##  $ status  : chr  "poor" "improved" "poor" "improved" ...
-    ## 'data.frame':    5 obs. of  4 variables:
-    ##  $ id      : num  3 4 2 1 5
-    ##  $ age     : num  22 32 45 33 32
-    ##  $ diabetes: chr  "Type1" "Type2" "Type1" "Type2" ...
-    ##  $ status  : Ord.factor w/ 3 levels "P"<"I"<"E": 1 2 1 2 3
-    ## 'data.frame':    5 obs. of  4 variables:
-    ##  $ id      : num  3 4 2 1 5
-    ##  $ age     : num  22 32 45 33 32
-    ##  $ diabetes: chr  "Type1" "Type2" "Type1" "Type2" ...
-    ##  $ status  : Factor w/ 3 levels "poor","improved",..: 1 2 1 2 3
-    ## 'data.frame':    5 obs. of  4 variables:
-    ##  $ id      : num  3 4 2 1 5
-    ##  $ age     : num  22 32 45 33 32
-    ##  $ diabetes: chr  "Type1" "Type2" "Type1" "Type2" ...
-    ##  $ status  : Factor w/ 3 levels "P","I","E": 3 2 3 2 1
-    ## NULL
-    ## NULL
-    ## NULL
-    ## NULL
-    ##        id         age         diabetes         status
-    ##  Min.   :1   Min.   :22.0   Length:5           P:1   
-    ##  1st Qu.:2   1st Qu.:32.0   Class :character   I:2   
-    ##  Median :3   Median :32.0   Mode  :character   E:2   
-    ##  Mean   :3   Mean   :32.8                            
-    ##  3rd Qu.:4   3rd Qu.:33.0                            
-    ##  Max.   :5   Max.   :45.0
-
-``` r
+```{r}
 #LISTS
 hospital <- c("A","B","C","D")
 ls <- list(hp = hospital, hp1 = pdata1, hp2 = pdata2, hp3 = pdata3, hp4 = pdata4)
 print.all(ls, names(ls))
+
 ```
 
-    ## $hp
-    ## [1] "A" "B" "C" "D"
-    ## 
-    ## $hp1
-    ##   id age diabetes    status
-    ## 3  3  22    Type1      poor
-    ## 4  4  32    Type2  improved
-    ## 2  2  45    Type1      poor
-    ## 1  1  33    Type2  improved
-    ## 5  5  32    Type2 excellent
-    ## 
-    ## $hp2
-    ##   id age diabetes status
-    ## 3  3  22    Type1      P
-    ## 4  4  32    Type2      I
-    ## 2  2  45    Type1      P
-    ## 1  1  33    Type2      I
-    ## 5  5  32    Type2      E
-    ## 
-    ## $hp3
-    ##   id age diabetes    status
-    ## 3  3  22    Type1      poor
-    ## 4  4  32    Type2  improved
-    ## 2  2  45    Type1      poor
-    ## 1  1  33    Type2  improved
-    ## 5  5  32    Type2 excellent
-    ## 
-    ## $hp4
-    ##   id age diabetes status
-    ## 3  3  22    Type1      E
-    ## 4  4  32    Type2      I
-    ## 2  2  45    Type1      E
-    ## 1  1  33    Type2      I
-    ## 5  5  32    Type2      P
-    ## 
-    ## [1] "hp"  "hp1" "hp2" "hp3" "hp4"
+## DATA INPUT FROM DIFFERENT SOURCES
 
-DATA INPUT FROM DIFFERENT SOURCES
----------------------------------
+|INPUT|PACKAGE|KEY FUNCTIONS|FURTHER READING/COMMENTS|
+|---|---|---|---|
+|DELIMITED FILES||||
+|XLS||||
+|RDBMS||||
+|XML||||
+|WEB SCRAPING||||
+|HDFS - HIVE TABLES, PARQUET FILES||||
+|JSON||||
+|SPSS, SAS||||
 
-| INPUT                             | PACKAGE | KEY FUNCTIONS | FURTHER READING/COMMENTS |
-|-----------------------------------|---------|---------------|--------------------------|
-| DELIMITED FILES                   |         |               |                          |
-| XLS                               |         |               |                          |
-| RDBMS                             |         |               |                          |
-| XML                               |         |               |                          |
-| WEB SCRAPING                      |         |               |                          |
-| HDFS - HIVE TABLES, PARQUET FILES |         |               |                          |
-| JSON                              |         |               |                          |
-| SPSS, SAS                         |         |               |                          |
+
