--- a/R/Getting Started/Data_Structures.Rmd
+++ b/R/Getting Started/Data_Structures.Rmd
@@ -158,6 +158,8 @@ with(mtcars, table(cyl,gear))
    tbl3 <<- table(cyl, gear)
  })
 tbl3
+
+
 ```
 
 ```{r}
@@ -211,13 +213,30 @@ print.all(ls, names(ls))
 
 |INPUT|PACKAGE|KEY FUNCTIONS|FURTHER READING/COMMENTS|
 |---|---|---|---|
-|DELIMITED FILES| | read.table()||
-|XLS|xls||* Create worksheets in a workbook, read from an excel 2007 file, which is a collection of xmls|
-|RDBMS||||
+|DELIMITED FILES| | read.table() ,read.csv()|Key arguments : read.table(file = ,header = ,sep = ,nrows = ,skip = ,colClasses = ,stringsAsFactors = ,na.strings = , nrow = )|
+|XLS|xls||* Create worksheets in a workbook, read from an excel 2007 file i.e xlsx, which is a collection of zipped xmls|
+|ZIPPED FILES||gzfile(),bzfile(),xzfile()||
+|RDBMS|RODBC||Also helpful to read from ms excel, ms access; library(RODBC)
+# create an odbc connection to excel workbook
+con <- RODBC::odbcConnectExcel(xls.file = )
+
+dataframe <- RODBC::sqlFetch(channel = con, sqtable = <file name>)
+RODBC::odbcClose()
+|
 |XML||||
 |WEB SCRAPING||||
 |HDFS - HIVE TABLES, PARQUET FILES||||
 |JSON||||
 |SPSS, SAS||||
 
+```{r}
+# read.table(file = ,header = ,sep = ,nrows = ,skip = ,colClasses = ,stringsAsFactors = ,na.strings = ,)
+# #install.packages("RODBC")
+# library(RODBC)
+# # create an odbc connection to excel workbook
+# con <- RODBC::odbcConnectExcel(xls.file = )
+# 
+# dataframe <- RODBC::sqlFetch(channel = con, sqtable = <file name>)
+# RODBC::odbcClose()
+```
 
