--- a/R/Getting Started/Data_Structures.Rmd
+++ b/R/Getting Started/Data_Structures.Rmd
@@ -214,14 +214,14 @@ print.all(ls, names(ls))
 |INPUT|PACKAGE|KEY FUNCTIONS|FURTHER READING/COMMENTS|
 |---|---|---|---|
 |DELIMITED FILES| | read.table() ,read.csv()||
-|XLS|xlsx,rodbc|read.xlsx()|* Create worksheets in a workbook, read from an excel 2007 file i.e xlsx, which is a collection of zipped xmls|
+|XLS|xlsx,rodbc|read.xlsx()|Create worksheets in a workbook, read from an excel 2007 file i.e xlsx, which is a collection of zipped xmls|
 |ZIPPED FILES||gzfile(),bzfile(),xzfile()||
-|RDBMS|RODBC||Also helpful to read from ms excel, ms access|
+|RDBMS|RODBC, DBI||Also helpful to read from ms excel, ms access|
 |XML|||Useful for putting the semi-structured xml format into structured format, http://www.omegahat.net/RSXML/Tour.pdf|
 |WEB SCRAPING|Rcurl and xml to read complex web data|url()- to make a web connection ,readLines() - to read text data, gsub() and grep() for pattern finding and replacement| http://www.programmingr.com/|
-|HDFS - HIVE TABLES, PARQUET FILES||||
-|JSON||||
-|SPSS, SAS||||
+|HDFS - HIVE TABLES, PARQUET FILES|sparklyr,sparklyr +  DBI||https://spark.rstudio.com/|
+|JSON|jsonlite, rjson|||
+|SPSS, SAS, STATA|Hmisc, foreign (SPSS & SAS)|read.spss(),read.ssd, spss.get(),sas.get||
 
 ```{r}
 # DELIMITED FILES
@@ -242,5 +242,27 @@ print.all(ls, names(ls))
 #install.packages("xlsx")
 #library(xlsx)
 #xlsx::read.xlsx(file= ,sheetName = ,sheetIndex = ,startRow = ,endRow = ,header = ,colClasses = )
+
+# RDBMS
+## TWO  WAY COMMUNICATION B/W R AND RDBMSes IS POSSIBLE
+## Follwing RDBMSes : MS SQL Server, MS Access, Oracle, PostgreSQL,IBM DB2, Teradata, SQLite, Sybase
+## R packages aceess these DBMSes through native database driver, or ODBC or JDBC driver
+  
+# ODBC INTERFACE
+#STEP 1: Install and configure ODBC drivers for the data base and platform
+# STEP 2: Install RODBC package
+
+# con <- RODBC::odbcConnect(dsn = ,uid = ,pwd = ) # Give a registered data source name (dsn)
+#RODBC::sqlFetch(channel = con , ... (<tblname>) # Fetch tables directly
+#RODBC::sqlQuery(channel = ,query = ,errors = ) # Pass a sql query
+# RODBC::sqlSave(channel = ,dat = ,tablename = ,append = ) # function to write tables, or append to table
+#RODBC::sqlDrop() # drop a table
+#close(con)
+
+
+# DBI INTERFACE
+# DBI PACKAGE PROVIDES A CLIENT SIDE (I.E FROM R) CONSISTENT INTERFACE TO DBMSes.
+# OTHER R PACKAGES BUILT USING THIS INTERFACE - RMySQL, ROracle RSQLite, RPostgreSQL
+# RJDBC provides access to DBMSes through a JDBC driver, needs to be installed and configured
 ```
 
