--- a/R/Getting Started/Basic_Viz.Rmd
+++ b/R/Getting Started/Basic_Viz.Rmd
@@ -37,28 +37,9 @@ attach(mtcars)
 dev.new()
 plot(x = hp ,y = mpg,type = "p") # PLOT IS A HIGH LEVEL FUNCTION IN R, WHICH CAN MAKE DIFFERENT TYPE OF PLOTs
 # BASED ON THE 'TYPE' ARGUMENTS,  IT TRIES TO FIGURE OUT THE TYPE BASED ON VARIABLES PROVIDED
-abline(reg = lm(mpg~hp),)
+abline(reg = lm(mpg~hp))
 detach(mtcars)
 #help(abline)
 
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
